# AppArtAgent

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  COMPLETE_STACK_MIGRATION.md  CONTRIBUTING.md  FRONTEND_MIGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LANGGRAPH_AGENT_IMPLEMENTATION.md  LANGGRAPH_BULK_PROCESSING.md  LICENSE  MIGRATION_SUMMARY.md  QUICK_START.md  README.md  SECURITY.md  SETUP_GUIDE.md  TODO.md  TREND_ANALYSIS_FIX_CHANGELOG.md  Taskfile.yml  UV_MIGRATION_COMPLETE.md  UV_MIGRATION_GUIDE.md  dev.sh  docker-compose.gcs.yml  docker-compose.yml  migrate-complete-stack.sh  migrate-frontend-to-pnpm.sh  migrate-to-uv.sh  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  docs.yml  dvf-import.yml
backend/: .env.example  Dockerfile  MULTI_UNIT_SALES_FIX.md  README.md  alembic.ini  create_tables.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: DVF_IMPORT_GUIDE.md  PRICE_FIX_CHANGELOG.md  download_dvf.py  fast_import_all_dvf.sh  fast_import_all_dvf_v2.sh  fast_import_dvf_final.sh  generate_workflow_graph.py  import_2021_only.sh  import_all_dvf.py  import_dvf.py  import_dvf_chunked.py  import_dvf_v1.py  import_dvf_v2.py  init_db.py  reimport_dvf.sh  rollback_dvf_import.py  (+6 more)
docs/: GCP_DEPLOYMENT.md  index.md  requirements.txt
frontend/: .dockerignore  .npmrc  Dockerfile  Dockerfile.pnpm  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
loadtest/: locustfile.py
scripts/: gcp-bootstrap.sh
(+187 files in other folders)
