[project]
name = "appart-agent"
version = "1.0.0"
description = "AI-powered apartment purchasing decision platform for France"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.57.0",
    "ipykernel>=7.1.0",
    "logfire[google-genai]>=4.19.0",
    "pillow>=12.1.0",
    "polars>=1.38.1",
    "protobuf>=6.33.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.26.7",
]

# [tool.uv.workspace]
# members = ["backend"]
# Note: Workspace disabled to allow backend to be built standalone in Docker

[dependency-groups]
dev = [
    "locust>=2.43.3",
    "pre-commit>=4.5.1",
]

[project.scripts]
download-dvf = "backend.scripts.download_dvf:main"
import-dvf = "backend.scripts.import_dvf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
